--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		h1 {
 			font-size: 40px;
 			margin-bottom: 30px;
+			text-align: center;
 		}
 		* {
 			box-sizing: border-box;
@@ -55,7 +56,7 @@
 
 	<h1>Busca Avançada no YouTube</h1>
 
-	<form action="www.youtube.com/results" method="get" target="_blank">
+	<form action="https://www.youtube.com/results" method="get" target="_blank">
 		<label for="search_query">Termo de Busca:</label>
 		<input type="text" name="search_query" id="search_query">
 
@@ -69,18 +70,17 @@
 		</select>
 
 		<label for="date">Data de Publicação:</label>
-		<select name="date" id="date">
+		<select name="search_sort" id="date">
 			<option value="">Qualquer data</option>
-			<option value="today">Hoje</option>
-			<option value="yesterday">Ontem</option>
-			<option value="this_week">Esta semana</option>
-			<option value="this_month">Este mês</option>
-			<option value="this_year">Este ano</option>
+			<option value="day">Hoje</option>
+			<option value="week">Esta semana</option>
+			<option value="month">Este mês</option>
+			<option value="year">Este ano</option>
 			<option value="custom">Intervalo personalizado</option>
 		</select>
 
 		<label for="duration">Duração:</label>
-		<select name="duration" id="duration">
+		<select name="search_duration" id="duration">
 			<option value="">Qualquer duração</option>
 			<option value="short">Curto (&lt; 4 minutos)</option>
 			<option value="medium">Médio (4-20 minutos)</option>
@@ -88,7 +88,7 @@
 		</select>
 
 		<label for="sort_by">Ordenar por:</label>
-		<select name="sort_by" id="sort_by">
+		<select name="search_sort" id="sort_by">
 			<option value="relevance">Relevância</option>
 			<option value="upload_date">Data de upload</option>
 			<option value="view_count">Número de visualizações</option>
@@ -96,7 +96,7 @@
 		</select>
 
 		<label for="safe_search">Modo restrito:</label>
-		<select name="safe_search" id="safe_search">
+		<select name="search_safe" id="safe_search">
 			<option value="off">Desativado</option>
 			<option value="moderate">Moderado</option>
 			<option value="strict">Restrito</option>
